app/api/docker_compiling_cpp/result
main.cpp:1:1: error: 'abayudno' does not name a type
    1 | abayudno;
      | ^~~~~~~~
